Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-6542

[COMCTL32] Alt+A fails to check radiobutton when instaling TuxPaint

    XMLWordPrintable

Details

    Description

      Run TuxPaint 0.9.21c Setup ( https://drive.google.com/folderview?id=0B2d0UoGDxVqTQjRJX3Z1ZnFhUUE&usp=sharing ). When Setup asks if you agree with license, hit Alt+A, it will focus radiobutton, but it will not check it. Doesn't happen so on WinXP.
      VMWare Workstation 8.0.2 build-591240, r56967.

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              EDIJS EDIJS
              Votes:
              2 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: